# coffee_map

./: .gitignore  Cargo.toml  README.md  flake.nix  todo.md
cache/: cache.kml
src/: cache.rs  cafe_placemarks.rs  google_places.rs  katana_stream.rs  main.rs  model.rs  terminal_gui.rs  write_kml.rs
