[package]
name = "coffee_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "0.2.21", features = ["macros"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
kml = "0.8.5"
itertools = "0.9.0"
