[package]
name = "coffee_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
kml = "0.8.5"
itertools = "0.9.0"
scraper = "0.19.0"
url = "2.5.0"
